--- a/package.json
+++ b/package.json
@@ -4,17 +4,17 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "my-vue-app/node_modules/.bin/vite",
+    "dev": "vite",
     "build": "my-vue-app/node_modules/.bin/tsc -b && vite build",
     "lint": "my-vue-app/node_modules/.bin/eslint .",
     "preview": "my-vue-app/node_modules/.bin/vite preview"
   },
   "dependencies": {
-    "@tailwindcss/vite": "^4.1.15",
+    "@tailwindcss/vite": "^4.1.16",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router": "^7.9.4",
-    "tailwindcss": "^4.1.15"
+    "tailwindcss": "^4.1.16"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
