--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "my-vue-app",
+  "homepage": "https://nikazaza.github.io/test_task_helloclient/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
